# adlike

./: README.md  pyproject.toml  requirements.txt
src/adlike/: __init__.py  adlike.py
