[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adlike"
version = "0.0.3"
authors = [
  { name="Chitra Vyanjan", email="chitra.vyanjan@gmail.com" },
]
description = "A python package to determine if an Image is an Advertisement"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chitravyanjan/adlike"
Issues = "https://github.com/chitravyanjan/adlike/issues"